Padding fixes on mobile

--- a/app/dashboard/layout.module.scss
+++ b/app/dashboard/layout.module.scss
@@ -67,14 +67,14 @@
       overflow: auto;
 
       @include for-size(phone-only) {
-        padding: 1.2rem;
+        padding: 1rem 2rem;
         width: auto;
         height: calc(100vh - 4.125rem);
         padding: auto;
       }
 
       @include for-size(tablet-portrait-up) {
-        padding: 1.2rem;
+        padding: 1rem 2rem;
         width: auto;
         height: calc(100vh - 4.125rem);
         padding: auto;
